--- a/app/src/main/res/layout/activity_achievement.xml
+++ b/app/src/main/res/layout/activity_achievement.xml
@@ -1,38 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Achievement"
-    android:background="@drawable/troi"
+    android:background="@drawable/bacground_home"
+    android:padding="10dp"
+    android:orientation="vertical"
     >
 
-
-    <ImageView
-        android:outlineSpotShadowColor="@color/black"
-        android:id="@+id/imageView"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
-        app:srcCompat="@android:drawable/ic_menu_revert" />
-
-    <TextView
-        android:id="@+id/textview"
-        android:text="achiveement"
-        android:textSize="30dp"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="30dp"
-        android:layout_toEndOf="@+id/imageView" />
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="27dp"
+            android:src="@drawable/back" />
+
+        <TextView
+            android:textColor="#E2FFFFFF"
+            android:id="@+id/textview"
+            android:text="Achievenment"
+            android:textSize="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            />
+    </LinearLayout>
     <RelativeLayout
 
-        android:layout_margin="15dp"
-        android:background="@drawable/relativelayout"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/trangtrong"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/textview"
@@ -48,11 +50,10 @@
             <TextView
                 android:gravity="center"
                 android:layout_weight="1"
-                android:id="@+id/textview1"
                 android:textSize="17dp"
                 android:layout_margin="2dp"
                 android:text="Target name"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -61,7 +62,7 @@
                 android:textSize="17dp"
                 android:layout_margin="2dp"
                 android:text="Start date"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -70,7 +71,7 @@
                 android:textSize="16dp"
                 android:layout_margin="2dp"
                 android:text="End date"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -79,7 +80,7 @@
                 android:textSize="16dp"
                 android:layout_margin="2dp"
                 android:text="Target"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -88,18 +89,19 @@
                 android:textSize="16dp"
                 android:layout_margin="2dp"
                 android:text="Used"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
-        <RelativeLayout
-            android:background="@drawable/bogoc"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:background="@drawable/dentrong"
             android:layout_marginTop="15dp"
             android:layout_below="@+id/linerlayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
-                android:layout_weight="1"
+                android:weightSum="5"
                 android:layout_marginTop="15dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -108,16 +110,14 @@
                     android:gravity="center"
                     android:layout_weight="1"
                     android:textSize="17dp"
-                    android:layout_margin="2dp"
                     android:text="2 Week"
                     android:textColor="#FFFFFE"
-                    android:layout_width="75dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:gravity="center"
                     android:layout_weight="1"
                     android:textSize="17dp"
-                    android:layout_margin="2dp"
                     android:text="22/01/2020"
                     android:textColor="#FFFFFE"
                     android:layout_width="wrap_content"
@@ -126,7 +126,6 @@
                     android:gravity="center"
                     android:layout_weight="1"
                     android:textSize="16dp"
-                    android:layout_margin="2dp"
                     android:text="27/02/2021"
                     android:textColor="#FFFFFE"
                     android:layout_width="wrap_content"
@@ -135,7 +134,6 @@
                     android:gravity="center"
                     android:layout_weight="1"
                     android:textSize="16dp"
-                    android:layout_margin="2dp"
                     android:text="30"
                     android:textColor="#FFFFFE"
                     android:layout_width="wrap_content"
@@ -144,16 +142,15 @@
                     android:gravity="center"
                     android:layout_weight="1"
                     android:textSize="16dp"
-                    android:layout_margin="2dp"
                     android:text="2"
-                    android:textColor="#FFFFFE"
+                    android:textColor="#02F60D"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
 
-        </RelativeLayout>
+        </LinearLayout>
 
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
