--- a/app/src/main/res/layout/activity_add__target.xml
+++ b/app/src/main/res/layout/activity_add__target.xml
@@ -1,134 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/troi">
-
-    <ImageView
-        android:outlineSpotShadowColor="@color/black"
-        android:id="@+id/image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
-        app:srcCompat="@android:drawable/ic_menu_revert" />
-
-    <TextView
-        android:id="@+id/textview"
-        android:text="achiveement"
-        android:textSize="30dp"
-        android:layout_width="wrap_content"
+    android:background="@drawable/bacground_home"
+    android:padding="10dp"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="30dp"
-        android:layout_toEndOf="@+id/image" />
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="27dp"
+            android:src="@drawable/back" />
+
+        <TextView
+            android:textColor="#E2FFFFFF"
+            android:id="@+id/textview"
+            android:text="Add target"
+            android:textSize="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            />
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/textview1"
-        android:background="@drawable/bogoc"
-        android:textColor="@color/white"
-        android:padding="5dp"
+        android:padding="10dp"
         android:gravity="center"
         android:textSize="22dp"
-        android:layout_below="@+id/textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="--Choose your target--"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:background="@drawable/dentrong"
+        android:textColor="#E2FFFFFF"/>
     <TextView
-        android:id="@+id/textview2"
         android:textColor="#FFB300"
         android:gravity="left"
         android:textSize="22dp"
-        android:layout_below="@+id/textview1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text= "Start date"
-        android:layout_marginTop="7dp"
-        android:layout_marginStart="20dp"/>
+        android:layout_marginTop="12dp"
+        />
     <EditText
-        android:background="@drawable/bogoc"
-        android:padding="5dp"
-        android:id="@+id/textview3"
-        android:textColor="@color/white"
+        android:padding="10dp"
         android:gravity="center"
         android:textSize="22dp"
-        android:layout_below="@+id/textview2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="01/01/2021"
-        android:layout_marginTop="2dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:text="01/01/2021"
+        android:background="@drawable/dentrong"
+        android:textColor="#E2FFFFFF"/>
     <TextView
-        android:id="@+id/textview4"
         android:textColor="#FFB300"
         android:gravity="left"
         android:textSize="22dp"
-        android:layout_below="@+id/textview3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="End date"
-        android:layout_marginTop="7dp"
-        android:layout_marginStart="20dp"/>
+        android:layout_marginTop="12dp"
+        />
     <EditText
-        android:background="@drawable/bogoc"
-        android:padding="5dp"
-        android:id="@+id/textview5"
-        android:textColor="@color/white"
+        android:padding="10dp"
         android:gravity="center"
         android:textSize="22dp"
-        android:layout_below="@+id/textview4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="01/01/2021"
-        android:layout_marginTop="2dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:background="@drawable/dentrong"
+        android:textColor="#E2FFFFFF"/>
     <TextView
-        android:id="@+id/textview6"
         android:textColor="#FFB300"
         android:gravity="left"
         android:textSize="22dp"
-        android:layout_below="@+id/textview5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Count of cigarette"
-        android:layout_marginTop="7dp"
-        android:layout_marginStart="20dp"/>
+        android:layout_marginTop="12dp"
+        />
     <EditText
-        android:background="@drawable/bogoc"
-        android:padding="5dp"
-        android:id="@+id/textview7"
-        android:textColor="@color/white"
+        android:padding="10dp"
         android:gravity="center"
         android:textSize="22dp"
-        android:layout_below="@+id/textview6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="...."
-        android:layout_marginTop="2dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:background="@drawable/dentrong"
+        android:textColor="#E2FFFFFF"/>
     <Button
-        android:background="@drawable/background"
-        android:padding="5dp"
         android:id="@+id/button"
-        android:textColor="@color/white"
+        android:background="@drawable/bogoc"
+        android:padding="12dp"
+        android:textColor="#D3161C22"
         android:gravity="center"
         android:textSize="22dp"
-        android:layout_below="@+id/textview7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SUBMIT"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        />
 
 
 
-</RelativeLayout>
+</LinearLayout>
