--- a/app/src/main/res/layout/activity_for__got__password.xml
+++ b/app/src/main/res/layout/activity_for__got__password.xml
@@ -1,65 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".For_Got_Password"
-    android:background="@drawable/troi">
+    android:background="@drawable/background"
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <TextView
-        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
         android:gravity="center"
-        android:textColor="#0022FF"
-        android:textSize="60dp"
+        android:textColor="#E2FFFFFF"
+        android:textSize="55dp"
         android:text="Forgot Password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+       />
     <TextView
-        android:id="@+id/textemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginTop="45dp"
         android:textSize="23dp"
-        android:textColor="#FFB300"
+        android:textColor="#F3DD1F"
         android:text="EMAIL"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:layout_marginEnd="20dp"
         android:textSize="25dp"
-        android:hint="email"
-        android:id="@+id/editemail"
+        android:text="email"
+        android:textColor="#E2FFFFFF"
+        android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textemail"
-        tools:ignore="MissingConstraints" />
+         />
     <Button
-        android:background="@drawable/background"
+        android:padding="12dp"
+        android:background="@drawable/bogoc"
         android:text="SEND"
         android:textSize="22dp"
         android:id="@+id/button1"
-        app:layout_constraintTop_toBottomOf="@+id/editemail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="25dp"/>
+        android:layout_marginTop="30dp"
+        android:textColor="#D3161C22"
+        />
     <Button
-        android:background="@drawable/background"
+        android:background="@drawable/dentrong"
         android:textSize="22dp"
         android:text="BACK"
+        android:textColor="#E2FFFFFF"
+        android:layout_marginTop="30dp"
         android:id="@id/button"
-        android:layout_margin="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/button1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
