--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,106 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@drawable/troi">
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:background="@drawable/background"
+    tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:layout_gravity="center"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/lich2"
-        android:background="@android:color/transparent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:src="@drawable/no_smoking"/>
     <TextView
-        android:id="@+id/textPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="25dp"
-        android:textSize="30dp"
-        android:textColor="#FFB300"
-        android:text="PASSWORD"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editUserName" />
-
-    <EditText
-        android:layout_marginEnd="20dp"
-        android:textSize="25dp"
-        android:hint="password"
-        android:id="@+id/editpassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPassword"
-        tools:ignore="MissingConstraints" />
-    <TextView
-        android:id="@+id/textUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="25dp"
-        android:textSize="30dp"
-        android:textColor="#FFB300"
         android:text="USERNAME"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <EditText
-        android:layout_marginEnd="20dp"
-        android:textSize="25dp"
-        android:hint="username"
-        android:id="@+id/editUserName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textUsername"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textViewforgor"
+        android:textSize="17dp"
+        android:layout_marginTop="5dp"
+        android:textColor="#F3DD1F"
+        android:layout_marginStart="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Forgot Password?"
-        android:textColor="@color/black"
+        android:layout_marginLeft="20dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="22dp"
+        android:layout_marginRight="22dp"
+        android:backgroundTint="@color/white"
+        android:paddingTop="25dp"
+        android:paddingBottom="15dp"
+        android:text="username"
+        android:textColor="@color/white"
+        android:textSize="22dp"
+        />
+
+    <TextView
+        android:text="PASSWORD"
         android:textSize="17dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editpassword" />
+        android:layout_marginTop="5dp"
+        android:textColor="#F3DD1F"
+        android:layout_marginStart="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="22dp"
+        android:layout_marginRight="22dp"
+        android:backgroundTint="@color/white"
+        android:paddingTop="25dp"
+        android:paddingBottom="15dp"
+        android:text="password"
+        android:textColor="@color/white"
+        android:textSize="22dp"
+        />
+    <TextView
+        android:id="@+id/forgot"
+        android:textColor="@color/white"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="Forgot Password ?"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="17dp"/>
 
     <Button
-        android:background="@drawable/background"
-        android:text="GET STATING"
         android:id="@+id/button"
-        android:textSize="22dp"
+        android:text="GET STARTING"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginLeft="22dp"
+        android:background="@drawable/bogoc"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewforgor" />
+        android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/create"
-        android:textColor="@color/black"
-        android:textSize="17dp"
+        android:id="@+id/createAcc"
+        android:paddingTop="5dp"
+        android:paddingBottom="25dp"
         android:text="Not registered? Create Account"
-        android:layout_width="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginRight="22dp"
+        android:gravity="center"
+        android:textSize="17dp"
+        android:textColor="@color/white"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:background="@drawable/bogoc1"
+        />
+</LinearLayout>
