--- a/app/src/main/res/layout/activity_sing__up.xml
+++ b/app/src/main/res/layout/activity_sing__up.xml
@@ -1,152 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Sing_Up">
+    tools:context=".Sing_Up"
+    android:orientation="vertical"
+    android:background="@drawable/background"
+    android:padding="25dp">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="40dp"
+            android:src="@drawable/no_smoking" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="Sign Up"
+            android:textColor="#E2FFFFFF"
+            android:textSize="40dp"
+            />
 
-    <ImageView
-        android:id="@+id/image1"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="40dp"
-        android:src="@drawable/lich2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/image1"
-        app:layout_constraintStart_toEndOf="@+id/image1"
-        android:layout_marginStart="30dp"
-        android:text="Sign Up"
-        android:textColor="#002AFF"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        />
-    <TextView
-        android:id="@+id/textname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginStart="25dp"
-        android:textSize="23dp"
-        android:textColor="#FFB300"
+        android:layout_marginTop="20dp"
+        android:textSize="18dp"
+        android:textColor="#F3DD1F"
         android:text="NAME"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image1" />
+        />
 
     <EditText
-        android:layout_marginEnd="20dp"
         android:textSize="25dp"
-        android:hint="username"
-        android:id="@+id/editname1"
+        android:text="username"
+        android:textColor="#E2FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
         android:layout_marginTop="3dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textname"
          />
     <TextView
-        android:id="@+id/textemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginStart="25dp"
-        android:textSize="23dp"
-        android:textColor="#FFB300"
-        android:text="PASSWORD"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editname1" />
-
-    <EditText
-        android:layout_marginEnd="20dp"
-        android:textSize="25dp"
-        android:hint="password"
-        android:id="@+id/editemail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="3dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textemail"
-        tools:ignore="MissingConstraints" />
-    <TextView
-        android:id="@+id/textPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginStart="25dp"
-        android:textSize="23dp"
-        android:textColor="#FFB300"
+        android:layout_marginTop="5dp"
+        android:textSize="18dp"
+        android:textColor="#F3DD1F"
         android:text="EMAIL"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editemail" />
+       />
 
     <EditText
-        android:layout_marginEnd="20dp"
         android:textSize="25dp"
-        android:hint="email"
-        android:id="@+id/editpassword"
+        android:text="email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="3dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPassword"
-        tools:ignore="MissingConstraints" />
-
+        android:layout_marginTop="5dp"
+        android:textColor="#E2FFFFFF"/>
     <TextView
-        android:id="@+id/textphone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginStart="25dp"
-        android:textSize="23dp"
-        android:textColor="#FFB300"
-        android:text="PHONE"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editpassword" />
+        android:layout_marginTop="5dp"
+        android:textSize="18dp"
+        android:textColor="#F3DD1F"
+        android:text="PASSWORD"
+        />
 
     <EditText
-        android:layout_marginEnd="20dp"
         android:textSize="25dp"
-        android:hint="phone"
-        android:id="@+id/editphone"
+        android:text="password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="3dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textphone"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginTop="5dp"
+        android:textColor="#E2FFFFFF"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="18dp"
+        android:textColor="#F3DD1F"
+        android:text="PHONE NUMBER"
+        />
+
+    <EditText
+        android:textSize="25dp"
+        android:text="phone number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textColor="#E2FFFFFF"/>
     <Button
+        android:textColor="#D3161C22"
         android:id="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/editphone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="25dp"
-        android:background="@drawable/background"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bogoc"
         android:text="NEXT"
         android:textSize="20dp"
         />
 
     <TextView
+        android:layout_gravity="center"
         android:textSize="15dp"
-        android:textColor="@color/black"
+        android:textColor="#E2FFFFFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Areadi have an account! Sign in?"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button" />
+        android:text="Aready have an account! Sign in?"
+         />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
