--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".User"
-    android:background="@drawable/troi">
-    <ImageView
-        android:id="@+id/image1"
-        android:src="@android:drawable/ic_menu_revert"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_margin="20dp"
-        />
-    <TextView
-        android:id="@+id/textview"
-        android:layout_margin="15dp"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/image1"
-        android:textSize="37dp"
-        android:text="Profile"
+    android:background="@drawable/bacground_home"
+    android:orientation="vertical"
+    android:padding="10dp">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-    />
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="27dp"
+            android:src="@drawable/back" />
+
+        <TextView
+            android:textColor="#E2FFFFFF"
+            android:id="@+id/textview"
+            android:text="Profile"
+            android:textSize="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            />
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/relative"
-        android:background="@drawable/bogoc"
-        android:layout_margin="20dp"
+        android:background="@drawable/dentrong"
         android:layout_below="@+id/textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -103,8 +108,8 @@
 
     </RelativeLayout>
     <RelativeLayout
-        android:layout_margin="15dp"
-        android:background="@drawable/relativelayout"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/trangtrong"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/relative"
@@ -122,7 +127,7 @@
                 android:textSize="17dp"
                 android:layout_margin="2dp"
                 android:text="Target name"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -131,7 +136,7 @@
                 android:textSize="17dp"
                 android:layout_margin="2dp"
                 android:text="Start date"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -140,7 +145,7 @@
                 android:textSize="16dp"
                 android:layout_margin="2dp"
                 android:text="End date"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -149,7 +154,7 @@
                 android:textSize="16dp"
                 android:layout_margin="2dp"
                 android:text="Target"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -158,12 +163,12 @@
                 android:textSize="16dp"
                 android:layout_margin="2dp"
                 android:text="Used"
-                android:textColor="#FF6F00"
+                android:textColor="#F3DD1F"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
         <RelativeLayout
-            android:background="@drawable/bogoc"
+            android:background="@drawable/dentrong"
             android:layout_marginTop="15dp"
             android:layout_below="@+id/linerlayout"
             android:layout_width="match_parent"
@@ -216,7 +221,7 @@
                     android:textSize="16dp"
                     android:layout_margin="2dp"
                     android:text="2"
-                    android:textColor="#FFFFFE"
+                    android:textColor="#43A047"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -226,4 +231,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
