--- a/app/src/main/res/layout/activity_for__got__password.xml
+++ b/app/src/main/res/layout/activity_for__got__password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".For_Got_Password"
+    tools:context=".view.For_Got_Password"
     android:background="@drawable/background"
     android:orientation="vertical"
     android:padding="20dp">
@@ -23,8 +23,7 @@
         android:layout_marginTop="45dp"
         android:textSize="23dp"
         android:textColor="#F3DD1F"
-        android:text="EMAIL"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:text="EMAIL" />
 
     <EditText
         android:textSize="25dp"
@@ -33,7 +32,7 @@
         android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/white"
          />
     <Button
         android:padding="12dp"
@@ -53,6 +52,7 @@
         android:textColor="#E2FFFFFF"
         android:layout_marginTop="30dp"
         android:id="@id/button"
+        android:padding="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
