--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Achievement"
+    tools:context=".view.Achievement"
     android:background="@drawable/bacground_home"
     android:padding="5dp"
     android:orientation="vertical"
@@ -12,8 +12,8 @@
 
     <ImageView
         android:layout_weight="2"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center"
         android:src="@drawable/no_smoking" />
 
@@ -25,7 +25,7 @@
         android:textColor="#E2FFFFFF"
         android:gravity="center"
         android:text="Smoking Control App"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
        />
         <LinearLayout
             android:paddingLeft="7dp"
@@ -182,7 +182,7 @@
                 android:paddingBottom="3dp"
                 android:text="Target name: 2 Week"
                 android:textColor="@color/black"
-                android:textSize="14dp" />
+                android:textSize="13dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -190,7 +190,7 @@
                 android:paddingBottom="3dp"
                 android:text="Start date: 27/02/21"
                 android:textColor="@color/black"
-                android:textSize="14dp" />
+                android:textSize="13dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -198,7 +198,7 @@
                 android:paddingBottom="3dp"
                 android:text="End date: 13/03/21"
                 android:textColor="@color/black"
-                android:textSize="14dp" />
+                android:textSize="13dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -206,7 +206,7 @@
                 android:paddingBottom="3dp"
                 android:text="Count of Target: 30 "
                 android:textColor="@color/black"
-                android:textSize="14dp" />
+                android:textSize="13dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -214,7 +214,7 @@
                 android:paddingBottom="3dp"
                 android:text="User: 2"
                 android:textColor="@color/black"
-                android:textSize="14dp" />
+                android:textSize="13dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -231,7 +231,7 @@
                 android:gravity="center"
                 android:text="you near go to\ncomplete the target"
                 android:textColor="#D6B831"
-                android:textSize="14dp" />
+                android:textSize="13dp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -243,6 +243,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="BACK TO SIGN IN"
+        android:textColor="#DCFAFBFB"
         android:layout_gravity="center"
         android:background="@drawable/dentrong"
          />
